--- a/learn-html/attributes.html
+++ b/learn-html/attributes.html
@@ -9,7 +9,7 @@
     <p style="color: red">hello html</p>
     <a href="">link</a>
     <img
-      src="./mrrobot.png"
+      src="./images/mrrobot.png"
       alt="mr robot photo"
       width="500px"
       height="200px"
